network-policy/samplepod2.yml
---
apiVersion: v1
kind: Pod
metadata:
   name: rice
   labels:
      app: rice
spec:
   containers:
       - name: con1
         image: nginx
         ports:
            - containerPort: 80
...
