network-policy/two.yml
---
apiVersion: v1
kind: Pod
metadata:
   name: proxy-network2
   namespace: network2
   labels:
      role: proxy
spec:
   containers:
    - name: con1
      image: nginx
      ports:
        - name: http-port
          containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
   name: multi-network2
   namespace: network2
   labels:
      role: app
spec:
   containers:
    - name: con1
      image: linuxkid/multiport-http:v3
      ports:
        - name: http-port
          containerPort: 80
          containerPort: 8080
          containerPort: 8081
